--- a/gb/20/12/15/n12622167.md
+++ b/gb/20/12/15/n12622167.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/drjlsn3260/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/drjlsn3260/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/drjlsn3260/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/drjlsn3260/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>落实幸福城市美名 嘉市YouBike 2.0公共自行车启用</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/474476-600x400.jpg" />
 <h6>	2020年12月15日中午12时在嘉义火车站前广场由市长黄敏惠宣告YouBike 2.0公共自行车正式启用营运，微笑单车公司董事长刘金标(右3)、执行董事刘丽珠(右2)、总经理何友仁(左1)等人共同见证这一刻。（李撷璎／大纪元）
@@ -17,64 +17,63 @@
 <p>另外，交通处与微笑单车公司合作推出“拍骑抽微笑好礼”活动，民众只要在嘉义市各站点租借YouBike 2.0，并与YouBike车辆合照上传至FB“YouBike嘉义粉丝团”指定贴文下方留言标记2位好友，并标注“#YouBike 2.0抵嘉啦!”就有机会获得YouBike周边商品。诗人渡也特别邀你一起骑YouBike追梦，渡也亲自为嘉义市YouBike 2.0作一首诗，诗名为《YouBike梦》，内文写道，“每一颗宇宙星球都有梦，每一个国家都有梦，每一座台湾城市都有梦，每一位嘉义市民都有梦，每一辆YouBike都爱追梦。”</p>
 <p>交通处提醒民众，“YouBike停放区”禁止停放其他车辆，并自即日(12/15)起生效。其余停放的汽机车，将依《道路交通管理处罚条例》与《道路交通标志标线号志设置规则》等移置；其余慢车将依《占用道路废弃车辆认定基准及查报处理办法》进行移置。</p>
 <p>民众可下载“YouBike微笑单车2.0”官方APP https://reurl.cc/d5YOv6进行注册及查询站点位置，一人最多可注册5张电子票证，包括一卡通或悠游卡，只要之前注册过就全国通用，也支援手机绑定信用卡扫码借车，让民众掌握即时资讯，操作更方便！</p>
-<figure id="12622186" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474486-450x300.jpg" alt=" 嘉义市YouBike 2.0公共自行车启用营运记者会圆满成功。" width="500" /><figcaption class="wp-caption-text">嘉义市YouBike 2.0公共自行车启用营运记者会圆满成功。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622185" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474485-450x300.jpg" alt=" 同借车方式解锁，萤幕显示临停解锁成功即完成。" width="500" /><figcaption class="wp-caption-text">同借车方式解锁，萤幕显示临停解锁成功即完成。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622183" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474484-450x300.jpg" alt="一按二扫三骑乘，扫描借车也不难。" width="500" /><figcaption class="wp-caption-text">一按二扫三骑乘，扫描借车也不难。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622182" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474483-450x300.jpg" alt="市长率领市府团队来支持今天的活动。" width="500" /><figcaption class="wp-caption-text">市长率领市府团队来支持今天的活动。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622180" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474482-450x300.jpg" alt="YouBike 2.0公共自行车系统特色介绍。" width="500" /><figcaption class="wp-caption-text">YouBike 2.0公共自行车系统特色介绍。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622178" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474481-450x253.jpg" alt=" 与会人员热情支持YouBike 2.0公共自行车活络在家乡这块土地。" width="500" /><figcaption class="wp-caption-text">与会人员热情支持YouBike 2.0公共自行车活络在家乡这块土地。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622175" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474480-450x300.jpg" alt=" 街舞表演者也为城市的大事YouBike 2.0公共自行车启用营运做宣传。" width="500" /><figcaption class="wp-caption-text">街舞表演者也为城市的大事YouBike 2.0公共自行车启用营运做宣传。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622174" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474479-450x300.jpg" alt="YouBike 2.0公共自行车的好康资讯公布。" width="500" /><figcaption class="wp-caption-text">YouBike 2.0公共自行车的好康资讯公布。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622172" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474478-450x300.jpg" alt=" 市长黄敏惠与各位贵宾一同实地骑乘YouBike 2.0公共自行车，来回绕了3圈，往一路发、提高设点密度的目标迈进。" width="500" /><figcaption class="wp-caption-text">市长黄敏惠与各位贵宾一同实地骑乘YouBike 2.0公共自行车，来回绕了3圈，往一路发、提高设点密度的目标迈进。（李撷璎／大纪元）</figcaption></figure>
-<figure id="12622170" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/12/474477-450x300.jpg" alt=" 市长黄敏惠与微笑单车公司董事长刘金标(中)、执行董事刘丽珠(左)合影留念。" width="500" /><figcaption class="wp-caption-text">市长黄敏惠与微笑单车公司董事长刘金标(中)、执行董事刘丽珠(左)合影留念。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622186" aria-describedby="caption-12622186" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474486-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474486-450x300.jpg" alt=" 嘉义市YouBike 2.0公共自行车启用营运记者会圆满成功。" width="500" /></a><figcaption id="caption-12622186" class="wp-caption-text">嘉义市YouBike 2.0公共自行车启用营运记者会圆满成功。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622185" aria-describedby="caption-12622185" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474485-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474485-450x300.jpg" alt=" 同借车方式解锁，萤幕显示临停解锁成功即完成。" width="500" /></a><figcaption id="caption-12622185" class="wp-caption-text">同借车方式解锁，萤幕显示临停解锁成功即完成。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622183" aria-describedby="caption-12622183" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474484-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474484-450x300.jpg" alt="一按二扫三骑乘，扫描借车也不难。" width="500" /></a><figcaption id="caption-12622183" class="wp-caption-text">一按二扫三骑乘，扫描借车也不难。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622182" aria-describedby="caption-12622182" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474483-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474483-450x300.jpg" alt="市长率领市府团队来支持今天的活动。" width="500" /></a><figcaption id="caption-12622182" class="wp-caption-text">市长率领市府团队来支持今天的活动。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622180" aria-describedby="caption-12622180" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474482-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474482-450x300.jpg" alt="YouBike 2.0公共自行车系统特色介绍。" width="500" /></a><figcaption id="caption-12622180" class="wp-caption-text">YouBike 2.0公共自行车系统特色介绍。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622178" aria-describedby="caption-12622178" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474481-450x253.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474481-450x253.jpg" alt=" 与会人员热情支持YouBike 2.0公共自行车活络在家乡这块土地。" width="500" /></a><figcaption id="caption-12622178" class="wp-caption-text">与会人员热情支持YouBike 2.0公共自行车活络在家乡这块土地。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622175" aria-describedby="caption-12622175" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474480-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474480-450x300.jpg" alt=" 街舞表演者也为城市的大事YouBike 2.0公共自行车启用营运做宣传。" width="500" /></a><figcaption id="caption-12622175" class="wp-caption-text">街舞表演者也为城市的大事YouBike 2.0公共自行车启用营运做宣传。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622174" aria-describedby="caption-12622174" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474479-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474479-450x300.jpg" alt="YouBike 2.0公共自行车的好康资讯公布。" width="500" /></a><figcaption id="caption-12622174" class="wp-caption-text">YouBike 2.0公共自行车的好康资讯公布。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622172" aria-describedby="caption-12622172" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474478-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474478-450x300.jpg" alt=" 市长黄敏惠与各位贵宾一同实地骑乘YouBike 2.0公共自行车，来回绕了3圈，往一路发、提高设点密度的目标迈进。" width="500" /></a><figcaption id="caption-12622172" class="wp-caption-text">市长黄敏惠与各位贵宾一同实地骑乘YouBike 2.0公共自行车，来回绕了3圈，往一路发、提高设点密度的目标迈进。（李撷璎／大纪元）</figcaption></figure>
+<figure id="12622170" aria-describedby="caption-12622170" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/12/474477-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/12/474477-450x300.jpg" alt=" 市长黄敏惠与微笑单车公司董事长刘金标(中)、执行董事刘丽珠(左)合影留念。" width="500" /></a><figcaption id="caption-12622170" class="wp-caption-text">市长黄敏惠与微笑单车公司董事长刘金标(中)、执行董事刘丽珠(左)合影留念。（李撷璎／大纪元）</figcaption></figure>
 <p>责任编辑：吕美琪</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/7/17/n12263200.md#1">暑假就是要出游   文化局推风城景点</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/7/22/n12275306.md#1">北市YouBike 2.0站点少 民众无处还车惨赔9千余元</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/10/14/n12474352.md#1">台铁中坜临时后站及跨站天桥10月14日启用</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/10/25/n12500378.md#1">高市YouBike 2.0站点673处 全国第一</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/2/n12519568.md#1">嘉市引进YouBike 2.0系统 微笑公共自行车</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/12/n12543546.md#1">中科院51周年  郑文灿期许以国防科技守护民主</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/19/n12561155.md#1">淡海轻轨 新北捷推折扣吸引观光</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/25/n12574663.md#1">来嘉旅游兼爱地球 八家饭店出租电动机车</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/11/27/n12578720.md#1">嘉市YouBike 2.0开始安柱作业</a></li>
-<li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12622346.md#1">2020嘉市国际管乐节室内乐 开放第二波免费索票</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/17/n12263200.md#1">暑假就是要出游   文化局推风城景点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/7/22/n12275306.md#1">北市YouBike 2.0站点少 民众无处还车惨赔9千余元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/14/n12474352.md#1">台铁中坜临时后站及跨站天桥10月14日启用</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/10/25/n12500378.md#1">高市YouBike 2.0站点673处 全国第一</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/2/n12519568.md#1">嘉市引进YouBike 2.0系统 微笑公共自行车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/12/n12543546.md#1">中科院51周年  郑文灿期许以国防科技守护民主</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/19/n12561155.md#1">淡海轻轨 新北捷推折扣吸引观光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/25/n12574663.md#1">来嘉旅游兼爱地球 八家饭店出租电动机车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/11/27/n12578720.md#1">嘉市YouBike 2.0开始安柱作业</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616208.md#1">文雅国小生态健行暨校本课程小艺人表演</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/25/n11000789.md#1" target="_blank">共产暴政录：消灭思想先驱的“一打三反”</a></li><li><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/10/n3655834.md#1" target="_blank">王华：闲谈西方的签名与东方的手印</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/11/28/n12581416.md#1">转世记忆58年历历在目 和尚说今生福报因果</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/14/n12619912.md#1">【微视频】美情报总监交大选报告 大事决断时？</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/14/n12620773.md#1">【新闻看点】屡败屡战 川普越战越勇有绝招</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/14/n12619839.md#1">【新闻大家谈】三大事环环相扣 或有震撼弹</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12616298.md#1">【十字路口】最高院为何拒绝 川普还有王牌吗</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12616255.md#1">川普到西点军校看球赛 欢迎声“山呼海啸”</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12616453.md#1">全球策略联盟主席：拜登不会当选 神主宰一切</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12617843.md#1">做核酸检测视频疯传 江疏影一句回应登热搜</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12617711.md#1">演员不背台词只靠提词板 章子怡直呼搭戏痛苦</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/15/n12620919.md#1">毛晓彤出生时被弃垃圾桶 成名后遭父索赡养费</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/12/n12615453.md#1">SJ于2020 TMA摘四奖唱新歌 BTS连三年获大奖</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12616518.md#1">SJ作客《认识的哥哥》 自揭成员过往大吵内幕</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12616588.md#1">皮夹在台弄丢很快取回 外国人：台湾万岁！</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/13/n12616814.md#1">世界上最寒冷的学校 -51°C也要上课</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/14/n12618609.md#1">真实报导美国大选 大纪元让网民刮目相看</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/14/n12618931.md#1">刻有川普大楼座标 神秘金属柱子在澳洲出现</a></li>
-<li><a href="https://github.com/hqixxg3677/djy/blob/master/gb/20/12/9/n12606924.md#1">【直播】肺最怕的病！这样保养肺老了爬山也不喘</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/drjlsn3260/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/15/n12622167.htm">落实幸福城市美名 嘉市YouBike 2.0公共自行车启用</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/15/n12622167.htm">落实幸福城市美名 嘉市YouBike 2.0公共自行车启用</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/drjlsn3260/djy/blob/master/gb/20/12/15/n12622167.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/drjlsn3260/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/drjlsn3260/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/drjlsn3260/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/12/15/n12622167.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
